@@ -26,6 +26,8 @@ Fixed bugs:
 * Fixed bug where ant would not copy system properties into new Project
   in ant/antcall tasks when inheritall="false" is set.
 
+* <propertyfile> would not close the original property file.
+
 Changes from Ant 1.4 to Ant 1.4.1
 ===========================================
 
